--- a/rates/templates/index.html
+++ b/rates/templates/index.html
@@ -5,5 +5,30 @@
 {{block.super}}
 
 
+<div class='container-fluid topBuffer'>
+<div class="row">
+<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+
+
+<!-- one card that will be looped over -->
+
+<div class="card">
+  <img class="card-img-top" src="static/images/sampleicon.png" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Project Title which is a link to the live site </h5>
+    <p class="card-text"> Project description will come here ... not more than 300 characters </p>
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-sm btn-outline-primary" data-toggle="modal" data-target="#exampleModalCenter"> Rate this project </button>
+
+  </div>
+</div>
+
+<!-- loop to end above this comment-->
+
+
+
+</div> <!-- end of column div -->
+</div> <!-- end of outer row-->
+</div> <!-- end of container-->
 
 {% endblock %}
