--- a/rates/templates/navbar.html
+++ b/rates/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/"> <img src="/static/images/rmpIcon.png" style="width:7vh; height:7vh;"> | </a>
+  <a class="navbar-brand" href="/"> <img src="static/images/sampleicon.png" style="width:14vh; height:5vh;"> | </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -8,7 +8,7 @@
 
     <!-- consider adding a search feature -->
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="&#xF002; Search" style="font-family:Arial, FontAwesome">
+      <input class="form-control form-control-sm mr-sm-2" type="text" placeholder="&#xF002; Search" style="font-family:Arial, FontAwesome">
       <!--<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>-->
     </form>
 
@@ -32,13 +32,13 @@
         <a class="nav-link" href="#">Login | </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Username <i class="fa fa-user-circle-o" style="font-size:28px"></i> </a>
+        <a class="nav-link" href="#">Username <i class="fa fa-user-circle-o" style="font-size:24px"></i> </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Submit Your Project</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fa fa-sign-out" style="font-size:28px"></i>  </a>
+        <a class="nav-link" href="#"><i class="fa fa-sign-out" style="font-size:24px"></i>  </a>
       </li>
     </ul>
 
