--- a/rates/templates/rmp_pages/base.html
+++ b/rates/templates/rmp_pages/base.html
@@ -15,6 +15,7 @@
 {% block styles %}
 {% bootstrap_css %}
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+<link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/litera/bootstrap.min.css" rel="stylesheet" integrity="sha384-D/7uAka7uwterkSxa2LwZR7RJqH2X6jfmhkJ0vFPGUtPyBMF2WMq9S+f9Ik5jJu1" crossorigin="anonymous">
 <link rel='stylesheet' href='{% static 'css/custom.css'%}'>
 
 
