--- a/rates/templates/index.html
+++ b/rates/templates/index.html
@@ -27,6 +27,34 @@
 
 
 
+<!-- Modal containing the review/rate form-->
+
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Project title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        the review form to display here: <br>
+        Design: rating... <br>
+        Usability: rating... <br>
+        Content: rating... <br>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-success">Submit review</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
 </div> <!-- end of column div -->
 </div> <!-- end of outer row-->
 </div> <!-- end of container-->
