style the registration form by changing the color and adding a link that navigates back to the homepage so as to enhance user experience

--- a/rates/templates/django_registration/registration_form.html
+++ b/rates/templates/django_registration/registration_form.html
@@ -15,9 +15,12 @@
       <div class="card card-default">
 
         <div class="card-heading">
-          <h3 class="text-center logo">Sign Up</h3>
+          <h3 class="text-center"> <a href="/"> Rate_Me_Pro </a>  </h3>
+          <hr>
+
+          <h5 class="text-center signUp">Sign Up</h5>
         </div>
-        <div class="card-body">
+        <div class="card-body regForm">
 
           <form  action="/accounts/register/" method="post">
             {% csrf_token %}
