--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -53,7 +53,24 @@
     padding: 2px 4px;
   }
 
+.regForm label{
+    font-size: smaller;
+    color: blue;
+    font-weight: bold;
+}
 
+.regForm input[type='text'], input[type='email'], input[type='password'] {
+    height: calc(1.5em + 0.5rem + 2px);
+    padding: 0.25rem 0.5rem;
+    font-size: 0.930125rem;
+    line-height: 1.5;
+    border-radius: 0.2rem;
+}
+
+.signUp {
+  margin-bottom: 0;
+  color: blue;
+}
 
 
 
