--- a/rates/templates/navbar.html
+++ b/rates/templates/navbar.html
@@ -29,7 +29,7 @@
     <ul class="navbar-nav ml-auto">
       
       <li class="nav-item">
-        <a class="nav-link" href="#">Login | </a>
+        <a class="nav-link" href="#">Reg/Login | </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Username <i class="fa fa-user-circle-o" style="font-size:24px"></i> </a>
