add a sign up link on the login page to navigate users to the register page incase they are new to the application

--- a/rates/templates/registration/login.html
+++ b/rates/templates/registration/login.html
@@ -24,6 +24,11 @@
               <input type="submit" class="btn btn-primary btn-sm" value="Login">
             </div>
 
+            <hr>
+
+            <p class='text-center'> New to Rate_Me_Pro? <a href='/accounts/register'> Sign-up here... </a></p>
+
+
             <input type="hidden" name="next" value="{{next}}">
 
           </form>
