--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -27,7 +27,7 @@
     opacity: 0;
     position: absolute;
     top: 90%;
-    left: 83%;
+    left: 81%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     text-align: center;
@@ -83,4 +83,84 @@
 .smallFont {
     color: blue;
     font-size: medium;
+}
+
+
+.profile {
+    overflow: hidden;
+    background-attachment: scroll;
+}
+
+.profileHeader {
+    height: 27vh;
+    width: 100vw;
+    background: black;
+    color: white;
+}
+
+.profileDetails {
+    margin-top: -15vh;
+}
+
+.profilePic {
+    height: 250px;
+    width: 250px;
+    border-radius: 50%;
+    border-width: 1px;
+    border-color: black;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.profUserName {
+    color: #fff;
+    font-weight: bold;
+}
+
+.profBlack {
+    color: #333;
+    list-style: none;
+    margin-top: 3vh;
+}
+
+.projects {
+    color: #333;
+    margin-top: 5vh;
+}
+
+.projectHeading {
+    margin-bottom: 10vh;
+}
+
+.card {
+    margin-bottom: 2vh;
+}
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+.profUserName {
+    color: gold;
+    font-weight: bolder;
+}
+}
+
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+.profUserName, .profBlack {
+    color: gold;
+    font-weight: bolder;
+    line-height: .7em;
+}
+}
+
+
+@media only screen 
+  and (device-width: 768px){
+.profileDetails {
+    margin-top: -18vh;
+}
 }
