--- a/rates/templates/navbar.html
+++ b/rates/templates/navbar.html
@@ -35,7 +35,7 @@
         <a class="nav-link" href="/my-profile">  {{request.user.username}} <i class="fa fa-user-circle-o" style="font-size:24px"></i> </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Submit Your Project</a>
+        <a class="nav-link" href="submit-project/">Submit Your Project!</a>
       </li>
 
       <li class="nav-item">
