use google fonts to style the application font/wording

--- a/rates/templates/django_registration/base.html
+++ b/rates/templates/django_registration/base.html
@@ -20,6 +20,7 @@
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
 <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/litera/bootstrap.min.css" rel="stylesheet" integrity="sha384-D/7uAka7uwterkSxa2LwZR7RJqH2X6jfmhkJ0vFPGUtPyBMF2WMq9S+f9Ik5jJu1" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css?family=Galada|Handlee|IBM+Plex+Sans|Kreon|Lobster|Oleo+Script|Patrick+Hand|Paytone+One&display=swap" rel="stylesheet">
 <link rel='stylesheet' href='{% static 'css/custom.css'%}'>
 
 
