--- a/rates/templates/rmp_pages/profile.html
+++ b/rates/templates/rmp_pages/profile.html
@@ -43,7 +43,7 @@
                 </div>
 
 
-            <!-- ============= start of loop to list all projects per specific user ================= -->
+            <!-- ============= start of loop that lists all projects per specific user ================= -->
                 
 
                 
