--- a/rates/templates/navbar.html
+++ b/rates/templates/navbar.html
@@ -35,11 +35,11 @@
         <a class="nav-link" href="/my-profile">  {{request.user.username}} <i class="fa fa-user-circle-o" style="font-size:24px"></i> </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="submit-project/">Submit Your Project!</a>
+        <a class="nav-link" href="/submit-project">Submit Your Project!</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="logout/"><i class="fa fa-sign-out" style="font-size:24px"></i>  </a>
+        <a class="nav-link" href="/logout"><i class="fa fa-sign-out" style="font-size:24px"></i>  </a>
       </li>
       
       {% else %}
@@ -49,7 +49,7 @@
       </li>
 
        <li class="nav-item">
-        <a class="nav-link" href="#">Submit Your Project</a>
+        <a class="nav-link" href="/submit-project">Submit Your Project</a>
       </li>
 
       {% endif %}
