--- a/rates/templates/navbar.html
+++ b/rates/templates/navbar.html
@@ -49,7 +49,7 @@
       </li>
 
        <li class="nav-item">
-        <a class="nav-link" href="/submit-project">Submit Your Project</a>
+        <a class="nav-link" href="/submit-project">Submit Your Project!</a>
       </li>
 
       {% endif %}
