--- a/rates/templates/registration/login.html
+++ b/rates/templates/registration/login.html
@@ -7,8 +7,17 @@
     <div class="col-md-4"></div>
     <div class="col-md-4 text-center">
       {% if form.errors %}
-        <p> Password or Username is incorrect </p>
+        <p> Password or Username is incorrect...try again </p>
       {% endif %}
+
+
+       {% if 'login_required' %}
+            <p class="alert alert-info" role="alert"> Please sign in to access this page.</p>
+      {% endif %}
+
+
+
+
       <div class="card card-default">
 
         <h3 class="text-center"> <a href="/"> Rate_Me_Pro </a>  </h3>
