create the profile update page from where users can edit their profile/bio-data

--- a/rates/templates/rmp_pages/profile.html
+++ b/rates/templates/rmp_pages/profile.html
@@ -13,7 +13,7 @@
     <!-- ============= profile pic and bio ================= -->
 
     <div class="container profileDetails">
-        <div class="row align-items-center homeContent">
+        <div class="row align-items-center profContent">
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
                 <img src="/static/images/sampleicon.png" alt="profPic" class="rounded-circle profilePic">
             </div>
@@ -26,7 +26,10 @@
                     <p> Bio: </p>
                     <p> Email: </p>
                     <p> My Projects: | length </p>
+                    <p> <a href="/update-profile"> Edit Profile </a> </p>
+
                 </div>
+                
             </div>
 
         </div>
