--- a/rates/templates/rmp_pages/update_profile.html
+++ b/rates/templates/rmp_pages/update_profile.html
@@ -15,7 +15,7 @@
 
 <div>
 
-<!-- PROJECT UPLOAD FORM -->
+<!-- PROFILE UPDATE FORM -->
     <form  action="{% url 'index' %}" method="post">
 
     {% csrf_token %}
