--- a/rates/templates/rmp_pages/profile.html
+++ b/rates/templates/rmp_pages/profile.html
@@ -15,17 +15,17 @@
     <div class="container profileDetails">
         <div class="row align-items-center profContent">
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
-                <img src="/static/images/sampleicon.png" alt="profPic" class="rounded-circle profilePic">
+                <img src="{{request.user.profile.prof_pic}}" alt="profPic" class="rounded-circle profilePic">
             </div>
 
             
 
             <div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
-                <h2 class="profUserName"> {{request.user.username}} </h2>
+                <h1 class="profUserName"> {{request.user.username}} </h1>
                 <div class="profBlack">
-                    <p> Bio: </p>
-                    <p> Email: </p>
-                    <p> My Projects: | length </p>
+                    <p> Bio: {{ request.user.profile.bio}}</p>
+                    <p> Email: {{request.user.email}} </p>
+                    <p> My Projects: {{user.project_set.all|length}}  </p>
                     <p> <a href="/update-profile"> Edit Profile </a> </p>
 
                 </div>
