display all the required aspects of the project submission form on the project submission page where users can upload their projects

--- a/rates/templates/rmp_pages/submit_project.html
+++ b/rates/templates/rmp_pages/submit_project.html
@@ -20,7 +20,7 @@
 
     {% csrf_token %}
 
-    {% comment %} {% bootstrap_form uploadForm layout='inline' %} {% endcomment %}
+    {% bootstrap_form submitProjectForm layout='inline' %}
 
     <div class="form-group">
 
