--- a/rates/templates/rmp_pages/update_profile.html
+++ b/rates/templates/rmp_pages/update_profile.html
@@ -20,7 +20,7 @@
 
     {% csrf_token %}
 
-    {% comment %} {% bootstrap_form uploadForm layout='inline' %} {% endcomment %}
+    {% bootstrap_form updateProf layout='inline' %}
 
     <div class="form-group">
 
