--- a/rates/templates/rmp_pages/base.html
+++ b/rates/templates/rmp_pages/base.html
@@ -10,7 +10,7 @@
 
 
     <title> rate_me_pro </title>
-</head>
+
 
 {% block styles %}
 {% bootstrap_css %}
@@ -19,8 +19,13 @@
 <link href="https://fonts.googleapis.com/css?family=Galada|Handlee|IBM+Plex+Sans|Kreon|Lobster|Oleo+Script|Patrick+Hand|Paytone+One&display=swap" rel="stylesheet">
 <link rel='stylesheet' href='{% static 'css/custom.css'%}'>
 
+{{ submitProjectForm.media}}
+
+{{ updateProf }}
 
 {% endblock %}
+
+</head>
 
 <body>
 {% include 'navbar.html' %}
