--- a/rates/templates/rmp_pages/submit_project.html
+++ b/rates/templates/rmp_pages/submit_project.html
@@ -12,8 +12,8 @@
 
 <div class="jumbotron">
 
-
-<div>
+<div class="row justify-content-center">
+<div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
 
 <!-- PROJECT UPLOAD FORM -->
     <form  action="{% url 'index' %}" method="post">
@@ -29,6 +29,7 @@
    </form>
    <!-- END OF FORM -->
 
+</div>
 </div>
 
 
