--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -85,6 +85,10 @@
     border-radius: 0.2rem;
 }
 
+.regForm small {
+    display: none;
+}
+
 .signUp {
   margin-bottom: 0;
   color: blue;
@@ -156,6 +160,12 @@
 .card {
     margin-bottom: 2vh;
 }
+
+
+.form button[type='button'] {
+  height: fit-content;
+}
+
 
 @media only screen 
   and (min-device-width: 320px) 
