--- a/rates/templates/rmp_pages/submit_project.html
+++ b/rates/templates/rmp_pages/submit_project.html
@@ -16,7 +16,7 @@
 <div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
 
 <!-- PROJECT UPLOAD FORM -->
-    <form  action="{% url 'index' %}" method="post">
+    <form enctype="multipart/form" action="{% url 'submit_project' %}" method="post">
 
     {% csrf_token %}
 
