create the search functionality where users are able to search for projects in the application

--- a/rates/templates/index.html
+++ b/rates/templates/index.html
@@ -12,7 +12,7 @@
 <!-- one card that will be looped over -->
 {% for project in projects %}
 
-<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4" style="height:100%;">
+<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
 
 
 <!--card containing project content -->
