--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -27,14 +27,15 @@
  .projectDiv {
      position: relative;
      width: 100%;
+     height: fit-content;
  }
 
    
  .projectImage {
     opacity: 1;
     display: block;
-    width: 100%;
-    height: auto;
+    width: auto;
+    max-height: 450px;
     transition: .5s ease;
     backface-visibility: hidden;
   }
