--- a/rates/templates/rmp_pages/search_results.html
+++ b/rates/templates/rmp_pages/search_results.html
@@ -5,6 +5,84 @@
 
 {% block content %}
 
+<div class="container">
+  <div class="row searchResults">
 
+    {% if searched_projects %}
+      <h2>Found {{ searched_projects |length }} project(s) about {{message}}</h2>
+    {% else %}
+      <h2> Found 0 project(s) about {{message}}</h2>
+    {% endif %}
+
+  </div>
+</div>
+
+<div class="container">
+<div class"row">
+<!-- one card that will be looped over -->
+{% for project in searched_projects %}
+
+<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+
+
+<!--card containing project content -->
+<div class="card projectDiv">
+  <img class="card-img-top projectImage" src="{{ project.project_pic.cdn_url }}" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title"> <a href="/"> {{ project.title }} </a> </h5>
+    <p class="card-text blur">  {{ project.description }}</p>
+    <p class="card-text blur">  {{ project.website }}</p>
+    <p class="card-text blur">  {{ project.user }}</p>  
+
+
+        <div class="overlay">
+        <p class="aveScore"> ave score:  </p> <!-- hidden until img hover -->
+        </div>
+
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-sm btn-outline-primary" data-toggle="modal" data-target="#exampleModalCenter"> Rate this project </button>
+
+  </div>
+</div>
+
+<!-- end of project-content-card -->
+
+
+<!-- Modal containing the review/rate form-->
+
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Project title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        the review form to display here: <br>
+        Design: rating... <br>
+        Usability: rating... <br>
+        Content: rating... <br>
+        Average Score: auto-calculated from above scores
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-success">Submit review</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+</div> <!-- end of column div -->
+
+
+{% endfor %}
+
+     
+<!-- loop to end above this comment-->
+</div>
+</div>
 
 {% endblock %}
