create the view function that enables the rating of projects

--- a/rates/templates/index.html
+++ b/rates/templates/index.html
@@ -32,7 +32,7 @@
 
 
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-sm btn-outline-primary" data-toggle="modal" data-target="#exampleModalCenter"> Rate this project </button>
+    <button type="button" class="btn btn-sm btn-outline-primary" data-toggle="modal" data-target="#{{project.id}}"> Rate this project </button>
 
   </div>
 </div>
@@ -42,11 +42,11 @@
 
 <!-- Modal containing the review/rate form-->
 
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal fade" id="{{project.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Project title</h5>
+        <h5 class="modal-title" id="exampleModalLongTitle"> {{project.title}} </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
