--- a/rates/templates/navbar.html
+++ b/rates/templates/navbar.html
@@ -6,12 +6,10 @@
 
   <div class="collapse navbar-collapse" id="navbarColor03">
 
-    <!-- consider adding a search feature -->
+    <!-- search feature -->
     <form action="{% url 'search_projects' %}" class="form-inline my-2 my-lg-0">
       <input class="form-control form-control-sm mr-sm-2" name="search" type="text" placeholder="&#xF002; Search" style="font-family:Arial, FontAwesome">
-      <!--<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>-->
     </form>
-
     <!-- end of search form -->
 
 
