--- a/rates/templates/rmp_pages/search_results.html
+++ b/rates/templates/rmp_pages/search_results.html
@@ -33,16 +33,28 @@
   <div class="card-body">
     <h5 class="card-title"> <a href="{{ project.website }}"> {{ project.title }} </a> </h5>
     <p class="card-text blur">  {{ project.description }}</p>
-    <p class="card-text blur"> <a href="{{ project.website }}"> View site </a> </p>
+    <p class="card-text blur"> <a href="{{ project.website }}"> View Site </a> </p>
     <p class="card-text blur">  {{ project.user }}</p>  
 
 
-        <div class="overlay">
+        {% comment %} <div class="overlay">
         <p class="aveScore"> ave score:  </p> <!-- hidden until img hover -->
-        </div>
+        </div> {% endcomment %}
+
 
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-sm btn-outline-primary" data-toggle="modal" data-target="#exampleModalCenter"> Rate this project </button>
+
+    <button type="button" class="btn btn-sm btn-outline-primary" data-toggle="modal" data-target="#{{project.id}}"> Rate this project </button>
+    <hr>
+    <p> Most recent project review based on the project's:</p>
+
+    {% for criteria in project.review_set.all %}
+
+    <p> Design: {{ criteria.design }}</p>
+    <p> Usability: {{ criteria.usability }}</p>
+    <p> Content: {{ criteria.content }}</p>
+    <p> Average Rating: {{ criteria.average }}</p>
+    {% endfor %}
 
   </div>
 </div>
@@ -52,30 +64,36 @@
 
 <!-- Modal containing the review/rate form-->
 
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal fade" id="{{project.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Project title</h5>
+        <h5 class="modal-title" id="exampleModalLongTitle"> {{project.title}} </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        the review form to display here: <br>
-        Design: rating... <br>
-        Usability: rating... <br>
-        Content: rating... <br>
-        Average Score: auto-calculated from above scores
+        Submit your ratings <strong>(scale of 1 to 10 in each criteria)</strong> for <strong>{{ project.title }}</strong> <br>
+
+        <!-- ===== PROJECT RATING FORM -->
+
+        <form action="{% url 'rate_projects' project_id=project.id %}" enctype="multipart/form-data" method="post">
+          {% csrf_token %}
+          {% bootstrap_form rateForm %}
+          <input type="submit" value="Submit" class="btn btn-primary">
+        </form>
+
+        <!-- ===== END OF PROJECT RATING FORM -->
+
       </div>
+
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">Submit review</button>
       </div>
     </div>
   </div>
 </div>
-
 
 </div> <!-- end of column div -->
 
@@ -90,5 +108,4 @@
 
 </div> <!-- end of outer row-->
 </div> <!-- end of container-->
-
 {% endblock %}
