--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -15,33 +15,33 @@
 
  }
 
- .nav-link {
+.nav-link {
     font-family: 'Kreon', serif;
     font-size: 23px;
 }
 
- .topBuffer {
+.topBuffer {
      margin-top: 7vh;
- }
+}
 
- .projectDiv {
+.projectDiv {
      position: relative;
      width: 100%;
      height: fit-content;
- }
+}
 
    
- .projectImage {
+.projectImage {
     opacity: 1;
     display: block;
     width: auto;
     max-height: 450px;
     transition: .5s ease;
     backface-visibility: hidden;
-  }
+}
 
     
-  .overlay {
+.overlay {
     transition: .5s ease;
     opacity: 0;
     position: absolute;
@@ -51,26 +51,26 @@
     -ms-transform: translate(-50%, -50%);
     text-align: center;
     width: fit-content;
-  }
+}
 
-  .projectDiv:hover .projectImage .blur {
+.projectDiv:hover .projectImage .blur {
       opacity: 0.2;
-  }
+}
 
    
-  .projectDiv:hover .overlay {
+.projectDiv:hover .overlay {
     opacity: 1;
   }
 
    
-  .aveScore {
+.aveScore {
     background-color:#88b0fa;
     color: white;
     font-weight: bold;
     border-radius: 10px;
     font-size: 14px;
     padding: 2px 4px;
-  }
+}
 
 .regForm label{
     font-size: smaller;
@@ -165,6 +165,11 @@
 
 .form button[type='button'] {
   height: fit-content;
+}
+
+.ratings p {
+    display: flex;
+    
 }
 
 
