resize the project images to prevent them from stretching vertically

--- a/rates/templates/index.html
+++ b/rates/templates/index.html
@@ -18,6 +18,7 @@
 
 
 <!--card containing project content -->
+<div class="card-rows">
 <div class="card projectDiv">
   <img class="card-img-top projectImage" src="{{ project.project_pic.cdn_url }}" alt="Card image cap">
   <div class="card-body">
@@ -45,6 +46,7 @@
     {% endfor %}
 
   </div>
+</div>
 </div>
 
 <!-- end of project-content-card -->
