create an API endpoint for the Profile objects and put a link to the same on the app's api page for users to access it

--- a/rates/templates/rmp_pages/get_apis.html
+++ b/rates/templates/rmp_pages/get_apis.html
@@ -14,7 +14,9 @@
 <div class='api-buttons'>
 
     <a class="btn btn-lg btn-primary" href="/users"> User API endpoint </a>
-    <a class="btn btn-lg btn-primary" href="/users"> Projects API endpint </a>
+    <a class="btn btn-lg btn-primary" href="/projects"> Projects API endpint </a>
+    <a class="btn btn-lg btn-primary" href="/profiles"> Profiles API endpint </a>
+
 
 </div>
 
